--- a/arch/arm64/configs/X01AD_defconfig
+++ b/arch/arm64/configs/X01AD_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-OrionX-Beta"
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
